--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>Birøkter App</header>
+  <header>Birøkterregisteret</header>
   <nav>
     <a href="#" onclick="visSide('oversikt')">Mine kuber</a>
     <a href="#" onclick="visSide('nykube')">Registrer kube</a>
