--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <main class="menu">
     <a href="bigarder.html" class="btn">Mine bigårder</a>
     <a href="registrer-bigard.html" class="btn">Registrer ny bigård</a>
-    <a href="bikube.html" class="btn">Mine bikuber</a>
+    <a href="mine bikuber.html" class="btn">Mine bikuber</a>
     <a href="registrer-bikube.html" class="btn">Registrer ny bikube</a>
     <a href="#" class="btn">Innstillinger</a>
   </main>
